[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack_bolt"
dynamic = ["version", "readme", "authors"]
description = "The Bolt Framework for Python"
license = { text = "MIT" }
classifiers = [
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = ["slack_sdk==3.36.0.dev5"]


[project.urls]
Documentation = "https://slack.dev/bolt-python"

[tool.setuptools.packages.find]
include = ["slack_bolt*"]

[tool.setuptools.dynamic]
version = { attr = "slack_bolt.version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.distutils.bdist_wheel]
universal = true

[tool.black]
line-length = 125

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
	"ignore:\"@coroutine\" decorator is deprecated since Python 3.8, use \"async def\" instead:DeprecationWarning",
	"ignore:The loop argument is deprecated since Python 3.8, and scheduled for removal in Python 3.10.:DeprecationWarning",
	"ignore:Unknown config option. asyncio_mode:pytest.PytestConfigWarning",                                                 # ignore warning when asyncio_mode is set but pytest-asyncio is not installed
]
asyncio_mode = "auto"

[tool.mypy]
files = "slack_bolt/"
force_union_syntax = true
warn_unused_ignores = true
